# Cpp

./: CMakeLists.txt  graf2  grafika
Lab2/: CMakeLists.txt
Lab2/zad1/: CMakeLists.txt
Lab2/zad2/: CMakeLists.txt
Lab2/zad2/src/: main.cpp
Lab2/zestaw1/: CMakeLists.txt
Lab2/zestaw1/src/: main.cpp
Lab2/zestaw2/: CMakeLists.txt
Lab2/zestaw2/src/: main.cpp
Lab2/zestaw3/: CMakeLists.txt
Lab2/zestaw3/src/: main.cpp
Lab2/zestaw4/: CMakeLists.txt
Lab2/zestaw4/src/: main.cpp
Lab4/: CMakeLists.txt
Lab4/zestaw1/: CMakeLists.txt
Lab4/zestaw1/src/: main.cpp
Lab4/zestaw2/: CMakeLists.txt
Lab4/zestaw2/include/: FunkcjaKwadratowa.h  Kula.h  Prostopadloscian.h  Student.h
Lab4/zestaw2/src/: FunkcjaKwadratowa.cpp  Kula.cpp  Prostopadloscian.cpp  Student.cpp  main.cpp
Lab4/zestaw3/: CMakeLists.txt
Lab4/zestaw3/include/: Figura.h  Punkt.h
Lab4/zestaw3/src/: Figura.cpp  Punkt.cpp  main.cpp
Lab4/zestaw4/: CMakeLists.txt
Lab5/zestaw1/: CMakeLists.txt
Lab6/zestaw1/: CMakeLists.txt
Lab6/zestaw2/: CMakeLists.txt
Lab7/zestaw1/: CMakeLists.txt
Projekt1/: CMakeLists.txt  README.md
Projekt1/matrixApp/: CMakeLists.txt  main.cpp
Projekt1/matrixLib/: CMakeLists.txt
Projekt2/: CMakeLists.txt  README.md  items  missions  names
Projekt2/include/: Enemy.h  Entity.h  Hero.h  Item.h  Mission.h  lib.h
Projekt2/src/: CMakeLists.txt  Enemy.cpp  Entity.cpp  Hero.cpp  Item.cpp  Mission.cpp  lib.cpp  main.cpp
SimpleCalc/: CMakeLists.txt
SimpleCalc/include/: calc.h
SimpleCalc/src/: calc.cpp  main.cpp
lab11/: CMakeLists.txt  RAII.cpp  RAII.h  main.cpp
(+16 files in other folders)
